[package]
name = "pong"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = 'abort'
