[package]
name = "pong"
version = "0.1.0"
authors = ["Zageron <hello@adambryant.ca>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
crossterm = "0.19"
tobj = "2"
tui = { version = "0.14", features = ["crossterm"], default-features = false }
ultraviolet = { version = "0.8", features = ["f64"] }
wgpu = "0.7.1"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = 'abort'
